# server/get_med_detail_handler.go
@@ -1,11 +1,13 @@
 package server
 
 import (
+	"fmt"
 	"github.com/decagonhq/meddle-api/errors"
 	"github.com/decagonhq/meddle-api/server/response"
 	"github.com/gin-gonic/gin"
 	"log"
 	"net/http"
+	"strconv"
 )
 
 func (s *Server) handleGetMedDetail() gin.HandlerFunc {
@@ -15,8 +17,12 @@ func (s *Server) handleGetMedDetail() gin.HandlerFunc {
 			err.Respond(c)
 			return
 		}
-		medId := c.Param("medId")
-			medication, err := s.MedicationService.GetMedicationById(user.ID, medId)
+		id := c.Param("id")
+		idUint, errr := strconv.ParseUint(id, 10, 32)
+		if errr != nil {
+			fmt.Println(err)
+		}
+			medication, err := s.MedicationService.GetMedicationDetail(uint(idUint), user.ID)
 			if err != nil {
 				log.Printf("get medications error : %v\n", err)
 				response.JSON(c, "", http.StatusInternalServerError, nil, errors.New("internal server error", http.StatusInternalServerError))
